tests/ui/methods/generic-method-unsatisfied-bound.stderr
error[E0277]: the trait bound `Params: Plugin<i32>` is not satisfied
  --> $DIR/generic-method-unsatisfied-bound.rs:24:9
   |
LL |     req.get_ref::<Params>();
   |         ^^^^^^^ unsatisfied trait bound
   |
help: the trait `Plugin<i32>` is not implemented for `Params`
      but trait `Plugin<Foo>` is implemented for it
  --> $DIR/generic-method-unsatisfied-bound.rs:17:1
   |
LL | impl Plugin<Foo> for Params {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `Foo`, found `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
